examples/alb-tls-examples/alb-k8s/kubernetes/nginx/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-showcase
  labels:
    app.kubernetes.io/part-of: alb-k8s-showcase
    app.kubernetes.io/managed-by: kubectl
