examples/alb-tls-examples/alb-k8s/kubernetes/nginx/02-service.yaml
# Copyright 2026 Schwarz Digits Cloud GmbH & Co. KG
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx-showcase
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/instance: nginx-showcase
    app.kubernetes.io/part-of: alb-k8s-showcase
    app.kubernetes.io/managed-by: kubectl
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/instance: nginx-showcase
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
